# smartplayer

./: .gitignore  README.md  config.h.in  configure  configure.ac
src/: Makefile.am  Makefile.in  audio.c  audio.h  debug.h  event.h  main.c  pktq.c  pktq.h  subtitle.c  subtitle.h  video.c  video.h
